--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemon": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "typeface-roboto": "0.0.75",
     "wait-on": "^3.3.0",
