--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "typeface-roboto": "0.0.75",
+    "uuid": "^3.3.3",
     "wait-on": "^3.3.0",
     "xlsx": "^0.15.4"
   },
