--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "electron-nodemon": "cross-env NODE_ENV=development nodemon --exec \"\"electron electron.js\"\"",
     "electron": "cross-env NODE_ENV=development electron electron.js",
     "react-start": "cross-env BROWSER=none react-scripts start",
+    "react": "react-scripts start",
     "react-build": "react-scripts build",
     "react-test": "react-scripts test",
     "react-eject": "react-scripts eject",
