add code comments for http request in login component

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.1",
     "concurrently": "^5.0.2",
     "cross-env": "^6.0.3",
     "electron": "^7.1.7",
