--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -18,15 +18,21 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.6</version>
         </dependency>
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
@@ -47,21 +53,6 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-        <!-- <plugins> -->
-        <!-- <plugin> -->
-            <!-- <groupId>org.apache.maven.plugins</groupId> -->
-            <!-- <artifactId>maven-war-plugin</artifactId> -->
-            <!-- <version>2.4</version> -->
-            <!-- <configuration> -->
-                <!-- <webResources> -->
-                    <!-- <resource> -->
-                        <!-- <directory>src/main/java/authentication</directory> -->
-                    <!-- </resource> -->
-                <!-- </webResources> -->
-                <!-- <failOnMissingWebXml>false</failOnMissingWebXml> -->
-            <!-- </configuration> -->
-        <!-- </plugin> -->
-        <!-- </plugins> -->
     </build>
 
     <properties>
