--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 .pnp.js
 
 # testing
-/springboot/src/test
+#/springboot/src/test
 
 # production
 /build
@@ -15,6 +15,7 @@
 /springboot/target
 
 # misc
+.idea
 .DS_Store
 .env.local
 .env.development.local
