--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+springboot/firstScheduling_BayDiagnosis_LOG.txt
+springboot/subseqScheduling_BayDiagnosis_LOG.txt
